// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categorize snapshots incorrect 1`] = `
<div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <div
    style={
      Object {
        "flexDirection": "column-reverse",
        "gap": "8px",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
        }
      }
    >
      <WithStyles(Categories)
        categories={Array []}
        model={
          Object {
            "categories": Array [],
            "choices": Array [],
          }
        }
        onDropChoice={[Function]}
        onRemoveChoice={[Function]}
        rowLabels={Array []}
      />
    </div>
    <WithStyles(Choices)
      choicePosition="above"
      choices={Array []}
      model={
        Object {
          "categories": Array [],
          "choices": Array [],
        }
      }
      onDropChoice={[Function]}
      onRemoveChoice={[Function]}
    />
  </div>
  <WithStyles(AlertDialog)
    onClose={[Function]}
    onCloseText="Cancel"
    open={false}
    text="You've reached the limit of  responses per area. To add another response, one must first be removed."
    title="Warning"
  />
</div>
`;

exports[`categorize snapshots renders 1`] = `
<div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <div
    style={
      Object {
        "flexDirection": "column-reverse",
        "gap": "8px",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
        }
      }
    >
      <WithStyles(Categories)
        categories={Array []}
        model={
          Object {
            "categories": Array [],
            "choices": Array [],
          }
        }
        onDropChoice={[Function]}
        onRemoveChoice={[Function]}
        rowLabels={Array []}
      />
    </div>
    <WithStyles(Choices)
      choicePosition="above"
      choices={Array []}
      model={
        Object {
          "categories": Array [],
          "choices": Array [],
        }
      }
      onDropChoice={[Function]}
      onRemoveChoice={[Function]}
    />
  </div>
  <WithStyles(AlertDialog)
    onClose={[Function]}
    onCloseText="Cancel"
    open={false}
    text="You've reached the limit of  responses per area. To add another response, one must first be removed."
    title="Warning"
  />
</div>
`;

exports[`categorize snapshots renders with feedback 1`] = `
<div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <div
    style={
      Object {
        "flexDirection": "column-reverse",
        "gap": "8px",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
        }
      }
    >
      <WithStyles(Categories)
        categories={Array []}
        model={
          Object {
            "categories": Array [],
            "choices": Array [],
            "correctness": "correct",
            "feedback": Object {
              "correct": Object {
                "default": "Correct",
                "type": "default",
              },
              "incorrect": Object {
                "default": "Incorrect",
                "type": "default",
              },
              "partial": Object {
                "default": "Nearly",
                "type": "default",
              },
            },
          }
        }
        onDropChoice={[Function]}
        onRemoveChoice={[Function]}
        rowLabels={Array []}
      />
    </div>
    <WithStyles(Choices)
      choicePosition="above"
      choices={Array []}
      model={
        Object {
          "categories": Array [],
          "choices": Array [],
          "correctness": "correct",
          "feedback": Object {
            "correct": Object {
              "default": "Correct",
              "type": "default",
            },
            "incorrect": Object {
              "default": "Incorrect",
              "type": "default",
            },
            "partial": Object {
              "default": "Nearly",
              "type": "default",
            },
          },
        }
      }
      onDropChoice={[Function]}
      onRemoveChoice={[Function]}
    />
  </div>
  <WithStyles(Feedback)
    correctness="correct"
    feedback={
      Object {
        "correct": Object {
          "default": "Correct",
          "type": "default",
        },
        "incorrect": Object {
          "default": "Incorrect",
          "type": "default",
        },
        "partial": Object {
          "default": "Nearly",
          "type": "default",
        },
      }
    }
  />
  <WithStyles(AlertDialog)
    onClose={[Function]}
    onCloseText="Cancel"
    open={false}
    text="You've reached the limit of  responses per area. To add another response, one must first be removed."
    title="Warning"
  />
</div>
`;
